# thorin

./: CMakeLists.txt  README.md  demo.cpp
.github/workflows/: workflow.yml
include/: orthopoly.hpp  polynomial.hpp  quadrature.hpp  stieltjes.hpp  weight_function.hpp
src/: CMakeLists.txt  orthopoly.C  polynomial.C  quadrature.C  stieltjes.C  weight_function.C
tests/: CMakeLists.txt  test.hpp  tests.cpp
